# PP_Keys

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  _fix.py  _tmp.py  ic_tmp.py  main.c  query
.VSCodeCounter/2026-07-16_15-30-25/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-07-16_16-29-46/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-07-17_10-22-53/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
app/: CMakeLists.txt  app.c  app_event.c  readme.txt
app/include/: app.h  app_event.h
config/: CMakeLists.txt  config.c
config/include/: config.h
core/: CMakeLists.txt  Readme.txt  action_list.c  dd_wrapper.c  deviceio_wrapper.c  hotkey.c  interception_wrapper.c  keyboard.c  macro_engine.c  single_instance.c  state_machine.c
core/include/: action_list.h  dd_wrapper.h  deviceio_wrapper.h  hotkey.h  interception_wrapper.h  keyboard.h  macro_engine.h  single_instance.h  state_machine.h
dox/2026.DD.EV.HVCI.63xxx/2.hid/drv/: install.bat  uninstall.bat
platform/win32/: CMakeLists.txt  message_loop.c  status_overlay.c  tray.c  ui_win32.c  voice.c  win_util.c  window.c
platform/win32/include/: message_loop.h  status_overlay.h  tray.h  ui_win32.h  voice.h  win_util.h  window.h
resource/: app.rc  manifest.xml
ui/: CMakeLists.txt  Readme.txt  ui.c  ui_capture.c
ui/include/: ui.h  ui_capture.h  ui_win32.h
ui/win32/: ui_win32.c
